# gogo-rest

./: .gitignore  README.md  buf.yaml  create-message.sh  docker-build-all.sh  docker-compose.yml  gogoRestApp.Dockerfile  migrations.Dockerfile  postgres.Dockerfile  rust-get-message.sh  rust-send-message.sh
gogo-rest-app/: get-message.sh  go.mod  main.go
gogo-rest-app/health/: health.go
gogo-rest-app/messages/: db.go  messages.go
gogo-rest-app/rest/: hello.go
gogo-rest-app/routes/: app.go  routes.go
gogo-rest-app/test/: health_test.go  messages_test.go  repo_suite_test.go
gogo-rest-app/test/testhelpers/: containers.go
gogo-rust-rest-app/: Cargo.toml  buf.gen.yaml
gogo-rust-rest-app/src/: main.rs  messages.rs  routes.rs
gogo-rust-rest-app/src/common/: axum.rs  errors.rs  mod.rs
gogo-rust-rest-app/src/core/: db.rs  errors.rs  mod.rs  state.rs  tonic.rs
gogo-rust-rest-app/src/db/: db.rs
gogo-rust-rest-app/src/health/: health.rs  router.rs
gogo-rust-rest-app/src/messages/: db.rs  grpc.rs  messages.rs  mod.rs  repository.rs  router.rs  service.rs
gogo-rust-rest-app/src/routes/: response.rs  routes.rs
migrations/conf/: flyway.conf
migrations/sql/: V1__add_message_table.sql
migrations/terraform/environments/dev/: main.tf
migrations/terraform/modules/migrations/: main.tf  variables.tf
proto-rust-gen/: Cargo.toml
proto-rust-gen/src/: main.rs  mod_gen.rs
tools/: Cargo.toml  buf.gen.yaml
tools/src/: main.rs
tools/src/proto_gen/: buf.rs  generator.rs  mod.rs  protoc.rs
tools/src/util/: filesystem.rs
(+7 files in other folders)
