[package]
name = "gogo-rust-rest-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"
serde_json = "1.0.140"
tokio-util = { version = "0.7.15", features = ["rt"] }
